# mobile_at_qaguru_lesson_19

./: .env.bstack  .env.local_emulator  .gitignore  README.md  attach.py  pyproject.toml
tests/: config.py  conftest.py  wikipedia_mobile_app_test.py
utils/: attach.py  file.py
